@@ -1,7 +1,7 @@
 [messages]
 jd_plays-december-2019-welcome1=Welcome to December, lets go search for Santa up north and reminisce about the last year.
 jd_plays-december-2019-shared_damage_respawn=You are safe from shared damage for __1__ seconds :)
-jd_plays-december-2019-shared_damage_died_by_player=__1__ killed by __2__'s shared damage
+jd_plays-december-2019-shared_damage_died_by_player=__1__ got their __2__ shared damage kill, getting __3__ for their __4__ team sponsored death
 
 [gui-caption]
 jd_plays-december-2019-warning-label=Incomming Tunneling Biter Pack
